# requests_winhttp_adapter

./: LICENSE  README.md  pyproject.toml
scripts/: testserver.py
src/requests_winhttp_adapter/: __init__.py  __main__.py
